--- a/style.css
+++ b/style.css
@@ -3,13 +3,15 @@
     padding: 0;
     box-sizing: border-box;
 }
-
-body{
-   text-align: center;
-}
 h1 {
+    text-align: center;
     margin: 20px 0px 20px 0px;
 }
+
+h2, h3 {
+    text-align: center;
+}
+
 .container {
     margin-top: 20px;
     display: flex;
@@ -36,6 +38,27 @@ h1 {
 }
 .alpha {
     background-color: #FFAEBC;
+}
+
+#instruction {
+    border: none;
+    outline: none;
+    font-size: 2rem;
+    margin-left: 50px;
+    margin-top: 3rem;
+    background: transparent;
+    cursor: pointer;
+}
+
+#instruction:hover{
+    color: crimson;
+}
+#info-container{
+    margin-left: 25px;
+    letter-spacing:1px  ;
+    padding: 20px;
+    font-size: 1.6rem;
+    display: none;
 }
 
 .flash {
